--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
         <title>
             Hello!
         </title>
+        <style>
+            #image {
+                width: 300px;
+                height: 300px;
+            }
+
+        </style>
+        
     </head>
     <body>
+        <div id="image">
+            <img src="1.jpg">
+        </div>
+
+       
+
         <h1>Hello World!</h1>
     </body>
 </html>
